feat(quotes): add petty crime headlines, mark repealed laws (廃止済み)
- Add tabloid headlines for petty crimes (shoplifting, etc.) without personal names
- Add （廃止済み） to author/source for repealed laws: 英国魔術法, 英国図書館違反法, 欧州委員会規則 EC No.2257/94, パリ市条例

--- a/index.html
+++ b/index.html
@@ -1192,23 +1192,23 @@
       { text: '公共の利益に反してみだりにごみ、鳥獣の死体その他の汚物又は廃物を棄てた者', author: '軽犯罪法 第1条第27号' },
       { text: '他人の進路に立ちふさがつて、若しくはその身辺に群がつて立ち退こうとせず、又は不安若しくは迷惑を覚えさせるような仕方で他人につきまとつた者', author: '軽犯罪法 第1条第28号' },
       { text: '行列に割り込み、又はその列を乱した者', author: '軽犯罪法 第1条第13号' },
-      { text: 'バナナは異常な曲がりがなく通常の曲線を有すること。Extra classのバナナは形状の欠陥があってはならない', author: '欧州委員会規則 EC No.2257/94' },
+      { text: 'バナナは異常な曲がりがなく通常の曲線を有すること。Extra classのバナナは形状の欠陥があってはならない', author: '欧州委員会規則 EC No.2257/94（廃止済み）' },
       { text: '疑わしい状況下でサケを受領し、又は処分した者は罰せられる', author: '英国サケ法 Salmon Act 1986 第32条' },
       { text: '午前八時より前の時間帯にカーペット、ラグまたはマットを打ち叩いてはならない。ただしドアマットはこの限りでない', author: '英国首都警察法 Metropolitan Police Act 1839 第60条' },
       { text: '酔った状態で公道において馬車、馬、牛、又は蒸気機関を操縦してはならない', author: '英国酒類免許法 Licensing Act 1872 第12条' },
       { text: '議会に甲冑を着用して入場してはならない', author: '英国武装携帯禁止法 Statute forbidding Bearing of Armour 1313' },
-      { text: '図書館において賭博行為を行い、又は乱暴な振舞いをした者は罰せられる', author: '英国図書館違反法 Library Offences Act 1898 第2条' },
+      { text: '図書館において賭博行為を行い、又は乱暴な振舞いをした者は罰せられる', author: '英国図書館違反法 Library Offences Act 1898 第2条（廃止済み）' },
       { text: 'チューインガムの輸入、製造及び販売を禁止する。ただし歯科用・ニコチン用など治療目的のガムを除く', author: 'シンガポール環境公衆衛生法' },
       { text: 'フライドチキンはフォークやナイフを使わず手で食べなければならない', author: '米国ジョージア州ゲインズビル市条例' },
       { text: 'ビッグフット（サスクォッチ）の故意の殺害は重罪とし、最高10万ドルの罰金及び10年以下の拘禁に処する', author: '米国ワシントン州スカマニア郡条例 第1969-01号' },
       { text: 'ロバが浴槽の中で眠ることを禁止する', author: '米国アリゾナ州法' },
-      { text: '女性がパリ市内で男性用の衣服を着用するには市当局の許可を得なければならない', author: 'パリ市条例' },
+      { text: '女性がパリ市内で男性用の衣服を着用するには市当局の許可を得なければならない', author: 'パリ市条例（廃止済み）' },
       { text: '仏教の活仏が転生するには、宗教事務局の事前の申請と許可を得なければならない', author: '中国チベット仏教活仏転生管理弁法' },
       { text: '公共の場で鳩に餌を与えた者は最高700ユーロの罰金に処する', author: 'イタリア・ヴェネツィア市条例' },
       { text: '公衆の面前において事実を摘示し人の名誉を毀損した者は、その事実が真実であっても、もっぱら公共の利害に関しない限り処罰される', author: '韓国刑法 第307条・第310条' },
       { text: '50キログラムを超えるジャガイモの販売、配達又は購入は、ジャガイモ公社の会員又は認可代理人のみが行うことができる', author: '西オーストラリア州ジャガイモ販売法 Marketing of Potatoes Act 1946 第22条' },
       { text: '英国領海内で捕獲されたクジラ及びチョウザメは国王の財産とする', author: '英国国王大権法 Prerogativa Regis 1324' },
-      { text: '何人も魔術、魔法、呪術又は占いを行使すると自称してはならない', author: '英国魔術法 Witchcraft Act 1735' },
+      { text: '何人も魔術、魔法、呪術又は占いを行使すると自称してはならない', author: '英国魔術法 Witchcraft Act 1735（廃止済み）' },
       { text: 'スコットランド国王のライオン旗を王室の許可なく掲げてはならない', author: 'スコットランド議会法 Lyon King of Arms Act 1672' },
       { text: '公共トイレの使用後に水を流さなかった者は罰金に処する', author: 'シンガポール環境公衆衛生法 第17条' },
       { text: '犬の飼い主は一日最低三回の散歩を行わなければならない。違反者は最高500ユーロの罰金に処する', author: 'イタリア・トリノ市条例' },
@@ -1418,6 +1418,18 @@
       { text: '出演者ことごとくスキャンダル発覚の“呪われた番組”', author: '週刊女性PRIME' },
       { text: '文春の直撃取材に〝完落ち〟某球団選手がみそぎ会見へ', author: '夕刊フジ' },
 
+      // しょうもない悪事の三面記事（実在事件ベース・人物名なし）
+      { text: 'プロ野球選手カードが欲しくてコンビニでトレカを万引きした男を逮捕', author: 'スポーツニッポン' },
+      { text: '「コメを置いて逃げたので万引きは不成立、俺は無罪」と主張した男を逮捕', author: '週刊女性' },
+      { text: 'パックのから揚げ1点（700円）を万引きした女を逮捕', author: '日刊スポーツ' },
+      { text: 'ドンキで100点盗んで一家総出で逮捕「万引き家族」か', author: '週刊文春' },
+      { text: '勤務するコンビニでトレカ100枚盗んだ「売れば金になる」男を逮捕', author: '読売新聞' },
+      { text: '35年間毎日万引きしていた鮮魚売り場の元店員を逮捕', author: '日刊SPA' },
+      { text: 'カード専門店から71万円分のトレカを盗んだ疑いで男を逮捕', author: 'NHK' },
+      { text: '安全靴を万引きした男がまた来店、店長の機転で逮捕', author: '朝日新聞' },
+      { text: '押収品のアニメトレカを盗んで転売、競馬に使った巡査を逮捕', author: '産経新聞' },
+      { text: '高級米8袋を万引きして駐車場で置いて逃走、それでも逮捕', author: '東京スポーツ' },
+
     ];
 
 
@@ -1580,7 +1592,7 @@
       { text: '疑わしい状況下でサケを受領し、又は処分した者は罰せられる。', source: '英国サケ法 Salmon Act 1986 第32条' },
       { text: '午前八時より前の時間帯にカーペット、ラグまたはマットを打ち叩いてはならない。ただしドアマットはこの限りでない。', source: '英国首都警察法 Metropolitan Police Act 1839 第60条' },
       { text: '議会に甲冑を着用して入場してはならない。', source: '英国武装携帯禁止法 Statute forbidding Bearing of Armour 1313' },
-      { text: '図書館において賭博行為を行い、又は乱暴な振舞いをした者は罰せられる。', source: '英国図書館違反法 Library Offences Act 1898 第2条' },
+      { text: '図書館において賭博行為を行い、又は乱暴な振舞いをした者は罰せられる。', source: '英国図書館違反法 Library Offences Act 1898 第2条（廃止済み）' },
       { text: 'フライドチキンはフォークやナイフを使わず手で食べなければならない。', source: '米国ジョージア州ゲインズビル市条例' },
       { text: 'ビッグフットの故意の殺害は重罪とし、最高10万ドルの罰金及び10年以下の拘禁に処する。', source: '米国ワシントン州スカマニア郡条例 第1969-01号' },
       { text: 'ロバが浴槽の中で眠ることを禁止する。', source: '米国アリゾナ州法' },
@@ -1592,7 +1604,7 @@
       { text: '食用ピクルスは30cmの高さから落下させた際に弾まなければならない。', source: '米国コネチカット州食品品質基準' },
       { text: 'ズボンの後ろポケットにアイスクリームを入れて携行してはならない。', source: '米国アラバマ州法' },
       { text: '公共トイレの使用後に水を流さなかった者は罰金に処する。', source: 'シンガポール環境公衆衛生法 第17条' },
-      { text: '何人も魔術、魔法、呪術又は占いを行使すると自称してはならない。', source: '英国魔術法 Witchcraft Act 1735' },
+      { text: '何人も魔術、魔法、呪術又は占いを行使すると自称してはならない。', source: '英国魔術法 Witchcraft Act 1735（廃止済み）' },
     ];
 
     const siteGlitchClasses = [
