docs(quotes): add （廃止済み） for Western Australia Potato Marketing Act 1946
- 西オーストラリア州ジャガイモ販売法: repealed 2016 (deregulation), mark author/source with （廃止済み）

--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@
       { text: '仏教の活仏が転生するには、宗教事務局の事前の申請と許可を得なければならない', author: '中国チベット仏教活仏転生管理弁法' },
       { text: '公共の場で鳩に餌を与えた者は最高700ユーロの罰金に処する', author: 'イタリア・ヴェネツィア市条例' },
       { text: '公衆の面前において事実を摘示し人の名誉を毀損した者は、その事実が真実であっても、もっぱら公共の利害に関しない限り処罰される', author: '韓国刑法 第307条・第310条' },
-      { text: '50キログラムを超えるジャガイモの販売、配達又は購入は、ジャガイモ公社の会員又は認可代理人のみが行うことができる', author: '西オーストラリア州ジャガイモ販売法 Marketing of Potatoes Act 1946 第22条' },
+      { text: '50キログラムを超えるジャガイモの販売、配達又は購入は、ジャガイモ公社の会員又は認可代理人のみが行うことができる', author: '西オーストラリア州ジャガイモ販売法 Marketing of Potatoes Act 1946 第22条（廃止済み）' },
       { text: '英国領海内で捕獲されたクジラ及びチョウザメは国王の財産とする', author: '英国国王大権法 Prerogativa Regis 1324' },
       { text: '何人も魔術、魔法、呪術又は占いを行使すると自称してはならない', author: '英国魔術法 Witchcraft Act 1735（廃止済み）' },
       { text: 'スコットランド国王のライオン旗を王室の許可なく掲げてはならない', author: 'スコットランド議会法 Lyon King of Arms Act 1672' },
@@ -1597,7 +1597,7 @@
       { text: 'ビッグフットの故意の殺害は重罪とし、最高10万ドルの罰金及び10年以下の拘禁に処する。', source: '米国ワシントン州スカマニア郡条例 第1969-01号' },
       { text: 'ロバが浴槽の中で眠ることを禁止する。', source: '米国アリゾナ州法' },
       { text: '仏教の活仏が転生するには、宗教事務局の事前の申請と許可を得なければならない。', source: '中国チベット仏教活仏転生管理弁法' },
-      { text: '50キログラムを超えるジャガイモの販売、配達又は購入は、ジャガイモ公社の会員又は認可代理人のみが行うことができる。', source: '西オーストラリア州ジャガイモ販売法 第22条' },
+      { text: '50キログラムを超えるジャガイモの販売、配達又は購入は、ジャガイモ公社の会員又は認可代理人のみが行うことができる。', source: '西オーストラリア州ジャガイモ販売法 第22条（廃止済み）' },
       { text: '酔った状態で公道において馬車、馬、牛、又は蒸気機関を操縦してはならない。', source: '英国酒類免許法 Licensing Act 1872 第12条' },
       { text: '英国領海内で捕獲されたクジラ及びチョウザメは国王の財産とする。', source: '英国国王大権法 Prerogativa Regis 1324' },
       { text: '豚にナポレオンと名付けることを禁止する。', source: 'フランス法' },
