--- a/index.html
+++ b/index.html
@@ -462,6 +462,21 @@
       letter-spacing: 0.03em;
     }
 
+    .fortune-more-wrap {
+      margin-top: 1rem;
+      text-align: center;
+    }
+    .fortune-more {
+      font-size: 0.85rem;
+      color: #8b6d3c;
+      text-decoration: none;
+      border-bottom: 1px solid rgba(139,109,60,0.35);
+    }
+    .fortune-more:hover {
+      color: #6b4e2a;
+      border-bottom-color: #6b4e2a;
+    }
+
     /* Actions */
     .actions {
       display: flex;
@@ -685,6 +700,7 @@
         <div class="animal-grip-tag" id="animalGrip">握力 5kg</div>
         <div class="animal-trivia" id="animalTrivia"></div>
         <div class="animal-deaths" id="animalDeaths"></div>
+        <p class="fortune-more-wrap"><a href="fortune.html" class="fortune-more">もっと見る</a></p>
       </div>
 
       <div class="actions">
@@ -820,7 +836,7 @@
       document.getElementById('animalName').textContent = animal.name;
       document.getElementById('animalGrip').textContent = `握力 ${animal.grip}kg`;
       const quote = quotes[Math.floor(Math.random() * quotes.length)];
-      document.getElementById('animalTrivia').textContent = `${quote.text} ── ${quote.author}`;
+      document.getElementById('animalTrivia').textContent = quote.author ? `${quote.text} ── ${quote.author}` : quote.text;
       document.getElementById('animalDeaths').textContent =
         animal.deaths < 0 ? '' :
         animal.deaths === 0 ? '年間の犠牲者数: 0人' : `年間の犠牲者数: 約${animal.deaths.toLocaleString()}人`;
