chore: SEO強化・サイト名から紙ちぎり削除・本番はCloudflare Pagesに統一
- サイト名を「握力チェッカー鑷」に統一（紙ちぎりを削除）
- robots.txt / sitemap.xml をビルドで生成、BASE_URL対応
- meta/OG/Twitter/JSON-LD 強化（theme-color, BreadcrumbList等）
- README-deploy: Cloudflare Pages を本番として明記
- .nvmrc, netlify.toml 追加

--- a/fortune.html
+++ b/fortune.html
@@ -3,10 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>フォーチュンクッキー｜紙ちぎり握力チェッカー"鑷"</title>
+  <title>フォーチュンクッキー｜握力チェッカー"鑷"</title>
+  <meta name="description" content="握力チェッカー鑷のフォーチュンクッキー。名言・格言・驚きの実在法令をランダムで表示。握力診断の合間にどうぞ。">
+  <meta name="keywords" content="フォーチュンクッキー,名言,格言,握力チェッカー,鑷,驚きの法令">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#6b4e2a">
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="握力チェッカー 鑷">
+  <meta property="og:title" content="フォーチュンクッキー｜握力チェッカー&quot;鑷&quot;">
+  <meta property="og:description" content="握力チェッカー鑷のフォーチュンクッキー。名言・格言・驚きの実在法令をランダムで表示。">
+  <meta property="og:locale" content="ja_JP">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="フォーチュンクッキー｜握力チェッカー&quot;鑷&quot;">
+  <meta name="twitter:description" content="握力チェッカー鑷のフォーチュンクッキー。名言・格言・驚きの実在法令をランダムで表示。">
+  <link rel="canonical" href="fortune.html">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&family=Noto+Serif+JP:wght@400;700;900&display=swap" as="style">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&family=Noto+Serif+JP:wght@400;700;900&display=swap" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8449006086533180" crossorigin="anonymous"></script>
+  <!-- Structured Data (JSON-LD) for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "フォーチュンクッキー｜握力チェッカー 鑷",
+    "description": "握力チェッカー鑷のフォーチュンクッキー。名言・格言・驚きの実在法令をランダムで表示。",
+    "inLanguage": "ja",
+    "isPartOf": { "@type": "WebApplication", "name": "握力チェッカー 鑷" }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1, "name": "握力チェッカー", "item": "index.html" },
+      { "@type": "ListItem", "position": 2, "name": "フォーチュンクッキー" }
+    ]
+  }
+  </script>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -78,7 +116,7 @@
   <div class="container">
     <header class="header">
       <h1>フォーチュンクッキー</h1>
-      <p class="sub">紙ちぎり握力チェッカー"鑷"</p>
+      <p class="sub">握力チェッカー"鑷"</p>
     </header>
     <div class="actions">
       <button type="button" class="btn" id="nextBtn">次のフォーチュン</button>
