--- a/index.html
+++ b/index.html
@@ -680,6 +680,18 @@
       100% { transform: scale(30) translateZ(500px); opacity: 1; filter: blur(2px); }
     }
 
+    /* スマホ版: 紙吹雪の巨大化を軽量化（ブラウザクラッシュ防止） */
+    @media (max-width: 768px) {
+      @keyframes confetti-rush-mobile {
+        0%   { transform: scale(1) translateZ(0); opacity: 0.18; }
+        60%  { transform: scale(4) translateZ(80px); opacity: 0.6; }
+        100% { transform: scale(10) translateZ(150px); opacity: 0.9; filter: blur(1px); }
+      }
+      .confetti-bg.site-confetti-rush .confetti-piece {
+        animation: confetti-rush-mobile 1.8s ease-in forwards !important;
+      }
+    }
+
   </style>
 </head>
 <body>
